# zheka

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
infra/: .env.example  PROD.md  backup_logs.sh  docker-compose.prod.yml
infra/docker/: bot.Dockerfile
src/zheka/: __init__.py  config.py  constants.py  ratelimit.py
src/zheka/bot/: handlers.py  main.py
src/zheka/context/: __init__.py  buffer.py
src/zheka/llm/: __init__.py  agent.py  classifier.py  client.py  formatting.py  helpers.py  prompt.py  schemas.py
src/zheka/logger/: __init__.py  setup.py
src/zheka/mcp/: __init__.py  bridge.py  links.py
src/zheka/triggers/: __init__.py  decision.py
tests/: test_buffer.py  test_classifier.py  test_config.py  test_decision.py  test_formatting.py  test_handlers.py  test_llm_client.py  test_logger.py  test_mcp_bridge.py  test_prompt.py  test_ratelimit.py  test_search_agent.py
